Split the project in two (Core and Symfony Bundle) to make it compatible without Symfony and more easily testable. Refactor different parts with more appropriates naming

--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,13 @@
             "Beapp\\RepositoryTesterBundle\\Pageable\\": "tests"
         }
     },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
             "dev-master": "0.4-dev"
         }
-    },
-    "config": {
-        "sort-packages": true
     }
 }
